welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:3: error: '(' expected but identifier found.
do {for nbPas <- 1 to 5 {
        ^Poucet:16: error: illegal start of simple expression
} while (crossing()==true) 
^