welcome.lessons.welcome.loopdowhile.Poucet2.scala.code
var nbPas=0
var nbBiscuit=0
do {for nbPas <- 1 to 5 {
  avance()
  if (estSurBuggle()==true){
    nbBuggle=nbBuggle+1
  }
  if (nbBuggle<3){
    droite()
  }
  if (nbBuggle>=3)
  gauche()
  nbPas=nbPas+1
}
  
} while (crossing()==true)